--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "json-server": "^0.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
