--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^4.1.1",
-    "json-server": "^0.15.0"
+    "concurrently": "^4.1.1"
   },
   "proxy": "http://localhost:5000"
 }
